fix(addon-mobile): `Card` fix paddings on mobile devices

--- a/projects/addon-mobile/styles/common/card-large.less
+++ b/projects/addon-mobile/styles/common/card-large.less
@@ -1,4 +1,4 @@
-[tuiCardLarge] {
+[tuiCardLarge][data-space] {
     &[data-space='normal'] {
         --t-padding: 1.25rem;
         --t-gap: 1.25rem;
